force-app/main/default/objects/Sentiment_Score__c/Sentiment_Score__c.object-meta.xml
<CustomObject>
    <label>Sentiment Score</label>
    <nameField>
        <displayFormat>SS-{000000}</displayFormat>
        <label>Interaction Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sentiment Scores</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>