force-app/main/default/objects/Sentiment_Score__c/fields/Chat_Transcript__c.field-meta.xml
<CustomField>
    <fullName>Chat_Transcript__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Chat Transcript</label>
    <referenceTo>LiveChatTranscript</referenceTo>
    <relationshipLabel>Sentiment Scores</relationshipLabel>
    <relationshipName>Sentiment_Scores</relationshipName>
    <type>Lookup</type>
</CustomField>