force-app/main/default/objects/Sentiment_Score__c/fields/Conversation_Channel__c.field-meta.xml
<CustomField>
    <fullName>Conversation_Channel__c</fullName>
    <label>Conversation Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Voice Call</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>Live Chat</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>