force-app/main/default/objects/Sentiment_Score__c/fields/Customer_Sentiment_Score__c.field-meta.xml
<CustomField>
    <fullName>Customer_Sentiment_Score__c</fullName>
    <inlineHelpText>Gives Probability of Customer Sentiment</inlineHelpText>
    <label>Sentiment Probability Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>