force-app/main/default/objects/Sentiment_Score__c/fields/Sentiment_Value__c.field-meta.xml
<CustomField>
    <fullName>Sentiment_Value__c</fullName>
    <formula>IF( ISPICKVAL( Customer_Sentiments__c , &apos;Positive&apos;)  ,  Customer_Sentiment_Score__c , IF(ISPICKVAL( Customer_Sentiments__c , &apos;Negative&apos;), -1*Customer_Sentiment_Score__c, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sentiment Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>