force-app/main/default/objects/Sentiment_Score__c/fields/Voice_Call__c.field-meta.xml
<CustomField>
    <fullName>Voice_Call__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Voice Call</label>
    <referenceTo>VoiceCall</referenceTo>
    <relationshipLabel>Sentiment Scores</relationshipLabel>
    <relationshipName>Sentiment_Scores</relationshipName>
    <type>Lookup</type>
</CustomField>